create concept material Design

--- a/index.html
+++ b/index.html
@@ -43,7 +43,15 @@
         Your site ends -->
 
         <!-- Navigation -->
-            <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
+            <div style="background-color:#388E3C;height:3%;">
+            </div>
+            <div class="navbar navbar-inverse" style="background-color:#4CAF50">
+                <div class="navbar-header">                    
+                    <a class="navbar-brand" href="">Brand</a>
+                </div>
+                
+            </div>
+            <a id="menu-toggle" style="background-color:#FFEB3B" href="#" class="btn btn-dark btn-lg toggle btn btn-success btn-fab btn-raised pull-right"><i class="glyphicon glyphicon-list"></i></a>
             <nav id="sidebar-wrapper">
                 <ul class="sidebar-nav">
                     <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
@@ -71,9 +79,7 @@
             <!-- Header -->
             <header id="top" class="header">
                 <div class="text-vertical-center">
-                    <h1>Start Bootstrap</h1>
-                    <h3>Free Bootstrap Themes &amp; Templates</h3>
-                    <br>
+                    <h1>My project</h1>
                     <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
                 </div>
             </header>
