--- a/index.html
+++ b/index.html
@@ -43,35 +43,35 @@
         Your site ends -->
 
         <!-- Navigation -->
-            <div style="background-color:#388E3C;height:3%;">
+            <div class="darkPrimaryColor heigthDarkPrimaryColor">
             </div>
-            <div class="navbar navbar-inverse" style="background-color:#4CAF50">
+            <div class="navbar navbar-inverse primaryColor" >
                 <div class="navbar-header">                    
                     <a class="navbar-brand" href="">Brand</a>
                 </div>
                 
             </div>
-            <a id="menu-toggle" style="background-color:#FFEB3B" href="#" class="btn btn-dark btn-lg toggle btn btn-success btn-fab btn-raised pull-right"><i class="glyphicon glyphicon-list"></i></a>
-            <nav id="sidebar-wrapper">
+            <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle btn btn-success btn-fab btn-raised accentColor marginHeight"><i class="glyphicon glyphicon-list"></i></a>
+            <nav id="sidebar-wrapper" class="lightPrimaryColor">
                 <ul class="sidebar-nav">
                     <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
                     <li class="sidebar-brand">
-                        <a href="#top"  onclick = $("#menu-close").click(); >Start Bootstrap</a>
+                        <a href="#top"  class="btn btn-default" onclick = $("#menu-close").click(); >My project</a>
                     </li>
                     <li>
-                        <a href="#top" onclick = $("#menu-close").click(); >Home</a>
+                        <a href="#top" class="btn btn-default" onclick = $("#menu-close").click(); >Home</a>
                     </li>
                     <li>
-                        <a href="#about" onclick = $("#menu-close").click(); >About</a>
+                        <a href="#about" class="btn btn-default" onclick = $("#menu-close").click(); >About</a>
                     </li>
                     <li>
-                        <a href="#services" onclick = $("#menu-close").click(); >Services</a>
+                        <a href="#services" class="btn btn-default" onclick = $("#menu-close").click(); >Services</a>
                     </li>
                     <li>
-                        <a href="#portfolio" onclick = $("#menu-close").click(); >Portfolio</a>
+                        <a href="#portfolio" class="btn btn-default" onclick = $("#menu-close").click(); >Portfolio</a>
                     </li>
                     <li>
-                        <a href="#contact" onclick = $("#menu-close").click(); >Contact</a>
+                        <a href="#contact" class="btn btn-default" onclick = $("#menu-close").click(); >Contact</a>
                     </li>
                 </ul>
             </nav>
@@ -80,7 +80,7 @@
             <header id="top" class="header">
                 <div class="text-vertical-center">
                     <h1>My project</h1>
-                    <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
+                    <a href="#about" class="btn btn-default btn-dark btn-lg ">Find Out More</a>
                 </div>
             </header>
 
