add button good

--- a/index.html
+++ b/index.html
@@ -45,13 +45,16 @@
         <!-- Navigation -->
             <div class="darkPrimaryColor heigthDarkPrimaryColor">
             </div>
-            <div class="navbar navbar-inverse primaryColor" >
+            <div class="navbar primaryColor" style="min-height:60px;">
                 <div class="navbar-header">                    
                     <a class="navbar-brand" href="">Brand</a>
                 </div>
+                <a id="menu-toggle" href="#" style="margin-top:10px;">
+                    <i class="btn btn-dark btn-lg toggle btn btn-success btn-fab glyphicon glyphicon-list primaryColor"></i>
+                </a>
                 
             </div>
-            <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle btn btn-success btn-fab btn-raised accentColor marginHeight"><i class="glyphicon glyphicon-list"></i></a>
+            
             <nav id="sidebar-wrapper" class="lightPrimaryColor">
                 <ul class="sidebar-nav">
                     <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
@@ -81,6 +84,7 @@
                 <div class="text-vertical-center">
                     <h1>My project</h1>
                     <a href="#about" class="btn btn-default btn-dark btn-lg ">Find Out More</a>
+                    <a href="javascript:void(0)" class="btn btn-primary btn-fab btn-raised mdi-action-grade"></a>
                 </div>
             </header>
 
