--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="text-vertical-center">
                     <h1>My project</h1>
                     <a href="#about" class="btn btn-default btn-dark btn-lg ">Find Out More</a>
-                    <a href="javascript:void(0)" class="btn btn-primary btn-fab btn-raised mdi-action-grade"></a>
+                    <a href="javascript:void(0)" class="btn btn-primary btn-fab btn-raised mdi-action-grade fixedButton"></a>
                 </div>
             </header>
 
